# c-playground

./: .gitignore  CMakeLists.txt  README.md
basic/: arrya.c  dataType.c  function-swap.c  function.c  input.c  pointer.c  string.c  structure.c
data-structure/linked-list/: single_linked_list.c
data-structure/sequenct-list/: sequence_list.c
data_structure/linked_list/: double_linked_list.c  single_linked_list.c
data_structure/sequence_list/: sequenct_list.c
data_structure/sequenct_list/: sequence_list.c
data_structure/stack/: stack.c
